--- a/.env
+++ b/.env
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3307
+DB_DATABASE=laravel_database_for_tests
+DB_USERNAME=user_laravel_database_for_tests
+DB_PASSWORD=z4lA74LOXoSohOROt4gAJEHaQu2i5o
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
